--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,5 +1,5 @@
 hibernate.connection.driver_class=org.postgresql.Driver
-hibernate.connection.url=jdbc:postgresql://localhost:5433/postgress
+hibernate.connection.url=jdbc:postgresql://localhost:5433/postgres
 hibernate.connection.username=postgres
 hibernate.connection.password=9999
 show_sql=true
